[gd_scene load_steps=4 format=3 uid="uid://y5e8chykbqpv"]

[ext_resource type="Script" uid="uid://dwgkfnkffn5m" path="res://dialogues/dialogue_history_popup.gd" id="1_u5d5l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3jkl"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buton"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DialogueHistoryPopup" type="CanvasLayer"]
layer = 101
script = ExtResource("1_u5d5l")

[node name="HistoryPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h3jkl")

[node name="VBoxContainer" type="VBoxContainer" parent="HistoryPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="HistoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Cronologia Dialoghi (Ultimi 20)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HistoryPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HistoryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

[node name="HistoryVBox" type="VBoxContainer" parent="HistoryPanel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="HistoryPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="HistoryPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_styles/normal = SubResource("StyleBoxFlat_buton")
theme_override_font_sizes/font_size = 18
text = "Chiudi"
